app/assets/stylesheets/application.scss
/* ... */
input {
  color: black;
}

/* Clearfix */

.group:after {
  content: "";
  display: block;
  clear: both;
}

/* Main Content */

body {
  font-family: sans-serif;
  font-size: 16px;
  font-weight: 400;
}

#main {
  position: relative;
  top: 101px;
}

/* Header */

.header {
  width: 100%;
  position: fixed;
  z-index: 10;
  top: 0px;
}

.header-nav {
  margin: 0 auto;
  width: 900px;
}

.header-logo a {
  float: left;
  color: white;
  padding: 12px 30px;
  border-radius: 3px;
  font-size: 24px;
}

.header-logo a img {
  float: left;
  height: 35px;
  width: 35px;
  margin: -5px 10px 0 -20px;
}

.header-logo a:hover {
  background:rgba(255,255,255,0.2);
}

.session-header a {
  display: block;
  float: right;
  padding: 11px 20px;
  color: white;
  border: 1px solid #fff;
  border-radius: 3px;
  margin: 5px;
  font-size: 16px;
}

.session-header a:hover {
  background:rgba(255,255,255,0.2);
}

.logout {
  display: block;
  font-size: 16px;
  float: right;
  padding: 11px 20px;
  color: white;
  border: 1px solid #fff;
  border-radius: 3px;
  margin: 5px;
}

.logout:hover {
  background:rgba(255,255,255,0.2);
  cursor: pointer;
}

.user-email {
  color: white;
  float: right;
  padding: 10px 20px;
  border-left: 1px solid #fff;
}

/* Login/Sign Up Form */

.background-image {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: image-url("login_image.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.tag-line {
  display: block;
  color: white;
  width: 600px;
  position: absolute;
  top: -40px;
  left: -90px;
}

.session-body {
  width: 300px;
  height: 150px;
  position: fixed;
  top: 150px;
  left: 0;
  right: 0;
  margin: auto;
  font-size: 20px;
  color: white;
  border-radius: 10px;
}

.session-body form.group {
  padding: 10px;
}

.session-body input {
  display: block;
  background: white;
  padding: 5px 10px;
  margin: 10px;
  border-radius: 3px;
  width: 240px;
  height: 25px;
  font-family: sans-serif;
  font-size: 16px;
  font-weight: 400;
}

.session-body .button {
  padding: 0 5px 0 5px;
  display: block;
  margin: auto;
  height: 30px;
  width: 250px;
  border-radius: 5px;
  font-size: 16px;
  color: white;
  background: #00aced;
  text-align: center;
}

.session-body .button:hover {
  cursor: pointer;
  color: rgba(255, 255, 255, 0.6)
}

.session-body .button:active {
  background: #43c5f6;
  color: #817d7d;
}

.session-body a {
  line-height: 30px
}

.errors {
  font-size: 16px;
  text-align: center;
}

.demo {
  margin: 10px 0 0 0;
}

/* Media Query */

@media (max-width: 900px) {
  .header-nav {
    width: 750px;
  }
}

@media (max-width: 750px) {
  .header-nav {
    width: 600px;
  }
}

@media (max-width: 600px) {
  .header-nav {
    width: 500px;
  }

  .tag-line {
    width: 400px;
    text-align: center;
    left: -50px;
  }
}


@media (max-width: 500px) {
  .header-nav {
    width: 300px;
  }

  .tag-line {
    width: 300px;
    text-align: center;
    left: 0px;
  }

  .session-header a {
    padding: 5px;
  }

  .logout {
    padding: 5px;
  }

  .subheader {
    top: 94px !important;
  }

  #main {
    top: 140px;
  }
}

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: portrait) {
    .header-nav {
      width: 300px;
    }

    .tag-line {
      width: 300px;
      text-align: center;
      left: 0px;
    }

    .session-header a {
      padding: 5px;
    }

    .logout {
      padding: 5px;
    }

    .subheader {
      top: 94px;
    }

    #main {
      top: 140px;
    }
}

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {
    .header-nav {
      width: 500px;
    }

    .tag-line {
      width: 400px;
      text-align: center;
      left: -50px;
    }
}

/* Subheader */

.subheader {
  display: block;
  position: fixed;
  z-index: 5;
  top: 52px;
  color: #da552f;
  border-bottom: 1px solid #da552f;
  background: white;
  width: 100%;
}

.prod-col-header {
  display: block;
  margin: auto;
  width: 900px;
  z-index: 10;
}

.prod-col h2 {
  float: left;
}

.prod-col a {
  display: block;
  padding: 15px 20px;
}

.prod-col a:hover {
  background: #da552f;
  color: white;
}

.active-subheader {
  box-shadow: 0 4px 2px -2px #da552f;
  font-weight: bold;
}

.right-subheader {
  display: block;
  float: right;
}

.add-product {
  display: block;
  float: left;
  margin: 10px 0 0 0;
  background: white;
  color: #da552f;
  font-size: 24px;
  font-weight: 100;
}

.add-product .new-product {
  display: block;
  padding: 0 7.5px 2px 7.5px;
  border-radius: 50%;
}

.add-product .new-product:hover {
  background-color: rgba(215, 86, 55, 0.8);
  color: white;
  cursor: pointer;
}

.search-bar {
  display: block;
  position: relative;
  float: right;
}

.search-bar label {
  position: absolute;
  top: 16px;
  left: 31px;
}

.search-bar input {
  padding: 10px 20px;
  border-radius: 5px;
  border: 1px solid #da552f;
  color: #534540;
  margin: 5px 5px 5px 10px;
}

/* Product Index */

.products {
  margin: auto;
  width: 900px;
  padding: 10px 0 0 20px;
}

.date {
  color: grey;
  font-size: 20px;
  padding: 10px 0;
}

.product {
  display: block;
  position: relative;
}

.product-info {
  float: left;
  padding: 0 0 0 20px;
}

.product-info h3 {
  display: block;
  margin: 0 0 5px 0;
  font-size: 20px;
  font-weight: bold;
  color: #534540;
}

.product-info p {
  color: #a7a6a6;
}

.product-link {
  display: block;
  cursor: pointer;
  float: left;
  width: 100%;
  padding: 10px;
}

.product:hover {
  background: #f0f0f0;
  border-radius: 5px;
}
.prod-coll-link {
  display: block;
  position: absolute;
  color: #a7a6a6;
  right: 10px;
  top: 25px;
  cursor: pointer;
}

.prod-coll-link:hover {
  color: #da552f;
}
/* ... */

